auth api's done

--- a/app/src/main/res/layout/activity_reset_pasword.xml
+++ b/app/src/main/res/layout/activity_reset_pasword.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="vm"
-            type="com.riggle.plug.ui.resetPassword.ResetPaswordActivityVM" />
+            type="com.riggle.plug.ui.resetPassword.ForgotPasswordActivityVM" />
 
     </data>
 
