--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -317,11 +316,13 @@
                 android:id="@+id/tv9"
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_weight="1"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/inter_medium"
+                android:foreground="?selectableItemBackground"
                 android:gravity="center"
+                android:onClick="@{v -> vm.onClick(v)}"
                 android:text="Continue"
                 android:textColor="@color/fsm_bg_light_teal"
                 android:textSize="@dimen/_14sdp"
