--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_25ssp"
             android:layout_marginEnd="@dimen/_16sdp"
-            android:text="Email*"
+            android:text="Phone*"
             android:textColor="@color/fsm_text_color"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,9 +74,10 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="example@domain.com"
+            android:hint="8171723121"
             android:imeOptions="actionNext"
-            android:inputType="textEmailAddress"
+            android:maxLength="10"
+            android:inputType="phone"
             app:layout_constraintEnd_toEndOf="@id/tvPhone"
             app:layout_constraintStart_toStartOf="@id/tvPhone"
             app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
@@ -101,7 +102,7 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="ABCD1234"
+            android:hint="admin@123"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@id/tvPassword"
