--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -79,10 +79,8 @@
                     android:layout_height="match_parent"
                     android:background="@color/white"
                     android:elevation="0dp"
-                    app:tabGravity="center"
+                    app:tabGravity="fill"
                     app:tabIndicatorColor="@color/line_color"
-                    app:tabIndicatorHeight="@dimen/_2sdp"
-                    app:tabMode="fixed"
                     app:tabTextAppearance="@style/tab2" />
 
             </com.google.android.material.appbar.AppBarLayout>
