--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="8171723121"
+            android:text="8171723121"
             android:imeOptions="actionNext"
             android:maxLength="10"
             android:inputType="phone"
@@ -102,7 +102,7 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="admin@123"
+            android:text="00000000"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@id/tvPassword"
