--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,6 +23,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:fillViewport="true"
         android:overScrollMode="never">
 
@@ -67,11 +68,28 @@
                         style="@style/TextView.InterRegular_12ssp"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_40sdp"
+                        android:layout_weight="1"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:gravity="center_vertical"
                         android:text="Profile"
                         android:textColor="@color/fsm_bg_light_teal"
                         android:textSize="@dimen/_16sdp" />
+
+                    <TextView
+                        android:id="@+id/tvResetPass"
+                        style="@style/TextView.InterRegular_12ssp"
+                        android:layout_width="@dimen/_100sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:background="@drawable/edit_back_view"
+                        android:foreground="?selectableItemBackground"
+                        android:gravity="center"
+                        android:onClick="@{v->vm.onClick(v)}"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_gravity="center_vertical"
+                        android:text="Reset Password"
+                        android:textColor="@color/fsm_text_color"
+                        android:textSize="@dimen/_10sdp"
+                        />
 
                 </LinearLayout>
 
@@ -81,16 +99,47 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="@dimen/_80sdp"
-                        android:layout_height="@dimen/_80sdp"
-                        android:layout_marginTop="@dimen/_15sdp"
-                        android:background="@color/white"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/moosa"
-                        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-                        app:strokeColor="@color/white"
-                        app:strokeWidth="@dimen/_2sdp" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/iv111"
+                            setImageWithFullUrl="@{bean.profile_image}"
+                            android:layout_width="@dimen/_80sdp"
+                            android:layout_height="@dimen/_80sdp"
+                            android:layout_marginTop="@dimen/_15sdp"
+                            android:background="@color/white"
+                            android:padding="@dimen/_2sdp"
+                            android:src="@drawable/fsm_logo"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                            app:strokeColor="@color/white"
+                            app:strokeWidth="@dimen/_2sdp" />
+
+                        <LinearLayout
+                            android:id="@+id/llCamera"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/white_circle"
+                            android:backgroundTint="@color/white"
+                            android:foreground="?selectableItemBackground"
+                            android:onClick="@{v->vm.onClick(v)}"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+
+
+                            <com.google.android.material.imageview.ShapeableImageView
+                                android:layout_width="@dimen/_18sdp"
+                                android:layout_height="@dimen/_18sdp"
+                                android:layout_margin="@dimen/_3sdp"
+                                android:src="@drawable/ic_camera"
+                                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                                app:tint="@color/line_color" />
+                        </LinearLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -116,6 +165,45 @@
 
             </LinearLayout>
 
+            <TextView
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_15ssp"
+                android:text="First Name"
+                android:textColor="@color/fsm_text_color"
+                android:textSize="@dimen/_12sdp" />
+
+            <EditText
+                android:id="@+id/etvFName"
+                style="@style/EditText.Phone"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="8dp"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:text="@{bean.first_name}" />
+
+            <TextView
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_15ssp"
+                android:text="Last Name"
+                android:textColor="@color/fsm_text_color"
+                android:textSize="@dimen/_12sdp" />
+
+            <EditText
+                android:id="@+id/etvLastName"
+                style="@style/EditText.Phone"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="8dp"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:text="@{bean.last_name}" />
 
             <TextView
                 android:id="@+id/tvPhone"
@@ -123,13 +211,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_25ssp"
+                android:layout_marginTop="@dimen/_15ssp"
                 android:text="Email"
                 android:textColor="@color/fsm_text_color"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/bgView" />
+                android:textSize="@dimen/_12sdp" />
 
             <EditText
                 android:id="@+id/etPhone"
@@ -141,10 +226,7 @@
                 android:enabled="false"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
-                android:text="@{bean.email}"
-                app:layout_constraintEnd_toEndOf="@id/tvPhone"
-                app:layout_constraintStart_toStartOf="@id/tvPhone"
-                app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
+                android:text="@{bean.email}" />
 
             <TextView
                 style="@style/TextView.InterRegular_12ssp"
@@ -233,9 +315,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
                 android:onClick="@{v->vm.onClick(v)}"
-                android:layout_marginTop="@dimen/_15sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:text="Aadhaar Front Image"
                 android:textColor="@color/fsm_text_color"
@@ -248,8 +330,8 @@
                 android:id="@+id/ivAadharFront"
                 android:layout_width="@dimen/_180sdp"
                 android:layout_height="@dimen/_100sdp"
-                android:layout_marginHorizontal="@dimen/_12sdp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:background="@color/white"
                 android:elevation="@dimen/_1sdp"
@@ -283,9 +365,28 @@
                 android:background="@color/white"
                 android:elevation="@dimen/_1sdp"
                 android:scaleType="fitXY"
-                android:layout_marginBottom="@dimen/_40sdp"
                 android:src="@drawable/ab"
                 app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
+
+            <TextView
+                android:id="@+id/tvUpdate"
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginHorizontal="@dimen/_45sdp"
+                android:layout_marginVertical="@dimen/_30sdp"
+                android:background="@drawable/edit_back_view"
+                android:backgroundTint="@color/line_color"
+                android:fontFamily="@font/inter_semibold"
+                android:foreground="?selectableItemBackground"
+                android:gravity="center"
+                android:onClick="@{v->vm.onClick(v)}"
+                android:text="Update"
+                android:textColor="@color/fsm_bg_light_teal"
+                android:textSize="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvResetPass" />
 
         </LinearLayout>
 
