--- a/app/src/main/res/layout/fragment_available_inventory.xml
+++ b/app/src/main/res/layout/fragment_available_inventory.xml
@@ -14,9 +14,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/line_colo10">
+        android:background="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeDrawer"
@@ -24,11 +25,99 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_5sdp"
             android:overScrollMode="never"
+            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/holder_available_inventory" />
+
+        <ImageView
+            android:id="@+id/ivNoData"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="@dimen/_150sdp"
+            android:scaleType="centerCrop"
+            android:layout_height="@dimen/_150sdp"
+            android:src="@drawable/no_data"
+            />
+
+        <LinearLayout
+            android:id="@+id/llUserView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:weightSum="1.1"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvUser"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/holder_users" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_weight="0.1">
+
+                <TextView
+                    android:id="@+id/tvAssign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_orange_stroke_round_border"
+                    android:fontFamily="@font/poppins_medium"
+                    android:foreground="?selectableItemBackground"
+                    android:includeFontPadding="false"
+                    android:onClick="@{v -> vm.onClick(v)}"
+                    android:padding="@dimen/_10sdp"
+                    android:text="Assign"
+                    android:textAlignment="center"
+                    android:textColor="@color/line_color"
+                    android:textSize="@dimen/_14sdp" />
+
+                <TextView
+                    android:id="@+id/tvCancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_4dp_border"
+                    android:backgroundTint="@color/line_color"
+                    android:fontFamily="@font/poppins_medium"
+                    android:foreground="?selectableItemBackground"
+                    android:includeFontPadding="false"
+                    android:onClick="@{v -> vm.onClick(v)}"
+                    android:padding="@dimen/_10sdp"
+                    android:text="@string/cancel"
+                    android:textAlignment="center"
+                    android:textColor="@color/fsm_bg_light_teal60"
+                    android:textSize="@dimen/_14sdp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
