--- a/app/src/main/res/layout/holder_available_inventory.xml
+++ b/app/src/main/res/layout/holder_available_inventory.xml
@@ -16,84 +16,92 @@
 
         <variable
             name="bean"
-            type="com.riggle.plug.data.model.UglyIssuence" />
+            type="com.riggle.plug.data.model.InventryData" />
 
     </data>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/_8sdp"
-        android:layout_marginHorizontal="@dimen/_12sdp"
-        android:layout_marginVertical="@dimen/_5sdp">
+        android:background="@color/line_colo10">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_10sdp"
-            android:layout_marginVertical="@dimen/_10sdp"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="@dimen/_12sdp"
+            android:layout_marginVertical="@dimen/_5sdp"
+            app:cardCornerRadius="@dimen/_8sdp">
 
-            <TextView
-                style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
-                android:text='@{"FasTag Number: " + bean.FNumber}'
-                android:textColor="@color/fsm_text_color"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:text="Assignee Name: Test User"
-                android:textColor="@color/fsm_text_color"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
-                android:text='@{"Privider: " + bean.bank}'
-                android:layout_marginTop="@dimen/_2sdp"
-                android:textColor="@color/fsm_text_color"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
-                android:text="Accepted On: 24-05-2024"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:textColor="@color/fsm_text_color"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvLogin"
-                style="@style/TextView.InterRegular_12ssp"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/edit_back_view"
-                android:backgroundTint="@android:color/holo_green_dark"
-                android:fontFamily="@font/inter_medium"
-                android:foreground="?selectableItemBackground"
-                android:gravity="center"
-                android:text="Assign Tag"
-                android:textColor="@color/fsm_bg_light_teal"
-                android:textSize="@dimen/_14sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvResetPass" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <TextView
+                    style="@style/TextView.InterRegular_12ssp"
+                    android:singleLine="true"
+                    android:text='@{"FasTag Number: " + bean.inventory.bar_code}'
+                    android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    style="@style/TextView.InterRegular_12ssp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:singleLine="true"
+                    android:text='@{"Assignee Name: " + bean.assigned_by.first_name}'
+                    android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/TextView.InterRegular_12ssp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:singleLine="true"
+                    android:text='@{"Privider: " + bean.inventory.provider}'
+                    android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/TextView.InterRegular_12ssp"
+                    setAssignedDate1="@{bean.assigned_to.created_at}"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:singleLine="true"
+                    android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvAssign1"
+                    style="@style/TextView.InterRegular_12ssp"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:background="@drawable/edit_back_view"
+                    android:backgroundTint="@android:color/holo_green_dark"
+                    android:fontFamily="@font/inter_medium"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:onClick="@{v -> callback.onItemClick(v,bean,pos)}"
+                    android:text="Assign"
+                    android:textColor="@color/fsm_bg_light_teal"
+                    android:textSize="@dimen/_14sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvResetPass" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
 
 </layout>
