--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -22,8 +22,8 @@
             android:id="@+id/ll1"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
-            android:gravity="center_vertical"
             android:background="@drawable/round_bottom_app_bg"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -55,27 +55,25 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/etvSearchProject"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_42sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/edit_back_view"
-            android:hint="Search"
             android:drawableStart="@drawable/iv_search_mini"
-            android:drawableTint="@color/fsm_text_color80"
             android:drawablePadding="@dimen/_7sdp"
+            android:drawableTint="@color/fsm_text_color80"
             android:gravity="center_vertical"
+            android:hint="Search"
+            android:paddingHorizontal="@dimen/_15sdp"
             android:singleLine="true"
-            android:textSize="@dimen/_14ssp"
             android:textColor="@color/fsm_text_color"
             android:textColorHint="@color/fsm_text_color80"
-            android:paddingHorizontal="@dimen/_15sdp"
-            app:layout_constraintTop_toBottomOf="@+id/ll1"
-            android:id="@+id/etvSearchProject"
-            />
-
+            android:textSize="@dimen/_14ssp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll1" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeDrawer"
@@ -87,6 +85,16 @@
             app:layout_constraintTop_toBottomOf="@+id/etvSearchProject"
             tools:listitem="@layout/holder_project_list" />
 
+        <ImageView
+            android:id="@+id/ivNoData"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/no_data"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etvSearchProject"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
