--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -86,7 +86,7 @@
             app:layout_constraintStart_toStartOf="@id/tvPhone"
             app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,78 +101,78 @@
                 android:id="@+id/tv500"
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_weight="1"
-                android:background="@drawable/custom_round_stroke_fsm_1"
+                android:background="@drawable/custom_round_stroke_fsm_2"
                 android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{v -> vm.onClick(v)}"
                 android:paddingVertical="@dimen/_7sdp"
                 android:text="₹500"
-                android:textColor="@color/fsm_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv1000"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll1" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv1000"
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_round_stroke_fsm_1"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:background="@drawable/custom_round_stroke_fsm_2"
                 android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{v -> vm.onClick(v)}"
                 android:paddingVertical="@dimen/_7sdp"
                 android:text="₹1000"
-                android:textColor="@color/fsm_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll1" />
+                app:layout_constraintStart_toEndOf="@+id/tv500"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv2000"
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_round_stroke_fsm_1"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:background="@drawable/custom_round_stroke_fsm_2"
                 android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{v -> vm.onClick(v)}"
                 android:paddingVertical="@dimen/_7sdp"
                 android:text="₹2000"
-                android:textColor="@color/fsm_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll1" />
+                app:layout_constraintEnd_toStartOf="@+id/tv5000"
+                app:layout_constraintStart_toStartOf="@+id/tv500"
+                app:layout_constraintTop_toBottomOf="@+id/tv500" />
 
             <TextView
                 android:id="@+id/tv5000"
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_round_stroke_fsm_1"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/custom_round_stroke_fsm_2"
                 android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{v -> vm.onClick(v)}"
                 android:paddingVertical="@dimen/_7sdp"
                 android:text="₹5000"
-                android:textColor="@color/fsm_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll1" />
+                app:layout_constraintStart_toEndOf="@+id/tv500"
+                app:layout_constraintTop_toBottomOf="@+id/tv500" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvPaymentSummary"
@@ -180,12 +180,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_25sdp"
-            app:cardBackgroundColor="@color/white"
+            android:layout_marginBottom="@dimen/_15sdp"
+            app:cardBackgroundColor="@color/line_color"
             app:cardCornerRadius="@dimen/_5sdp"
-            app:cardElevation="@dimen/_4sdp"
+            app:layout_constraintBottom_toTopOf="@+id/ll3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll2">
+            app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -199,7 +199,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/payment_summary"
-                    android:textColor="@color/fsm_text_color"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_14sdp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -211,7 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_6sdp"
                     android:text="@string/total_amount"
-                    android:textColor="@color/fsm_text_color"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv1" />
@@ -222,7 +222,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text='@{"₹"+amount}'
-                    android:textColor="@color/fsm_text_color"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv2"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +233,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:background="@color/fsm_bg_teal"
+                    android:background="@color/white"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv3" />
 
@@ -245,7 +245,7 @@
                     android:layout_marginTop="@dimen/_12sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/grand_total"
-                    android:textColor="@color/fsm_bg_teal"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/v1" />
@@ -257,14 +257,13 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_semibold"
                     android:text='@{"₹"+amount}'
-                    android:textColor="@color/fsm_bg_teal"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/tv4" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         </androidx.cardview.widget.CardView>
 
