--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -53,21 +53,19 @@
                 android:textSize="@dimen/_16sdp" />
 
 
-
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvBalance"
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/_15sdp"
             android:layout_height="@dimen/_100sdp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="@dimen/_15sdp"
             app:cardBackgroundColor="@color/white"
-            app:cardElevation="@dimen/_6sdp"
             app:cardCornerRadius="@dimen/_10sdp"
-            app:layout_constraintTop_toBottomOf="@+id/ll1"
+            app:cardElevation="@dimen/_6sdp"
             app:layout_constraintBottom_toBottomOf="@+id/ll1"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll1">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -83,9 +81,9 @@
                     android:gravity="center"
                     android:text="Available Balance"
                     android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textSize="@dimen/_12sdp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv3"
@@ -95,56 +93,56 @@
                     android:fontFamily="@font/inter_semibold"
                     android:gravity="center"
                     android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_22sdp"
                     app:layout_constraintStart_toStartOf="@+id/tv1"
-                    app:layout_constraintTop_toBottomOf="@+id/tv1"
-                    android:textSize="@dimen/_22sdp" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv1" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/iv2"
-                    app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-                    android:layout_margin="@dimen/_10sdp"
-                    android:src="@drawable/india"
-                    android:scaleType="centerCrop"
                     android:layout_width="@dimen/_42sdp"
                     android:layout_height="@dimen/_42sdp"
+                    android:layout_margin="@dimen/_10sdp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/india"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
                 <TextView
                     style="@style/TextView.InterRegular_12ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:gravity="center"
                     android:text="Indian Rupee"
-                    android:layout_marginTop="@dimen/_5sdp"
                     android:textColor="@color/fsm_text_color"
+                    android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="@+id/iv2"
-                    app:layout_constraintTop_toBottomOf="@+id/iv2"
-                    android:textSize="@dimen/_12sdp" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv2" />
 
                 <TextView
                     android:id="@+id/tvAddMoneyWallet"
                     style="@style/TextView.InterRegular_12ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:background="@drawable/edit_back_view"
-                    android:drawableStart="@drawable/ic_plus"
                     android:backgroundTint="@color/line_color"
+                    android:drawableStart="@drawable/ic_plus"
                     android:drawablePadding="@dimen/_6sdp"
                     android:drawableTint="@color/white"
                     android:fontFamily="@font/inter_semibold"
                     android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:onClick="@{v-> vm.onClick(v)}"
-                    app:layout_constraintStart_toStartOf="@+id/tv3"
-                    app:layout_constraintTop_toBottomOf="@+id/tv3"
-                    android:layout_marginTop="@dimen/_8sdp"
                     android:paddingHorizontal="@dimen/_8sdp"
                     android:paddingVertical="@dimen/_8sdp"
                     android:text="Add Money"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12sdp" />
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintStart_toStartOf="@+id/tv3"
+                    app:layout_constraintTop_toBottomOf="@+id/tv3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -169,21 +167,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginEnd="@dimen/_10sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv11"
-            app:layout_constraintBottom_toBottomOf="@+id/tv11"
             android:background="@drawable/edit_back_view1"
-            android:gravity="center">
+            android:clickable="false"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/tv11"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv11">
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="wrap_content"
-                android:paddingEnd="@dimen/_15sdp"
                 style="@style/spinnerStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="@dimen/_25sdp"
                 android:layout_gravity="center"
+                android:clickable="false"
                 android:dropDownVerticalOffset="@dimen/_25sdp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:paddingEnd="@dimen/_15sdp" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -192,10 +192,21 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_5sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv11"
-            app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/holder_wallet_transactions" />
+
+        <ImageView
+            android:id="@+id/ivNoData"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/no_data"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv11" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
