--- a/app/src/main/res/layout/holder_wallet_transactions.xml
+++ b/app/src/main/res/layout/holder_wallet_transactions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,7 +17,7 @@
 
         <variable
             name="bean"
-            type="com.riggle.plug.data.model.Drawer" />
+            type="com.riggle.plug.data.model.WalletTransactionsData" />
 
     </data>
 
@@ -65,7 +66,7 @@
                 android:fontFamily="@font/inter_semibold"
                 android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="@+id/iv1"
-                android:text="credit"
+                android:text="Credit"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp"
                 app:layout_constraintTop_toBottomOf="@+id/tv1"
@@ -79,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
                 android:gravity="center"
-                android:text="₹500"
+                android:text='@{"₹" + String.valueOf(bean.amount)}'
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,9 +92,9 @@
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:text="@{bean.name}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
+                setAssignedDate3="@{bean.created_at}"
                 app:layout_constraintBottom_toBottomOf="@+id/iv1"
                 app:layout_constraintEnd_toEndOf="@+id/tv3"
                 app:layout_constraintTop_toBottomOf="@+id/tv1"/>
@@ -136,32 +137,37 @@
                 android:id="@+id/tv8"
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
-                android:text="Comment:"
+                android:text="Payment Id:"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/inter_semibold"
                 android:textSize="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 app:layout_constraintStart_toStartOf="@+id/iv1"
                 app:layout_constraintTop_toBottomOf="@+id/tv7"/>
 
             <TextView
                 android:id="@+id/tv9"
                 style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
-                android:text="Amount credited"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{bean.payment_id}"
                 android:textColor="@color/white"
+                android:paddingBottom="@dimen/_5sdp"
+                tools:text="sadasdadas das d asd as d asd as d asd as das "
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginStart="@dimen/_3sdp"
                 app:layout_constraintStart_toEndOf="@+id/tv8"
-                app:layout_constraintBottom_toBottomOf="@+id/tv8"/>
+                android:layout_marginEnd="@dimen/_5sdp"
+                app:layout_constraintTop_toTopOf="@+id/tv8"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/tv10"
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
-                android:text="₹50"
+                android:text="₹0"
                 android:textColor="@color/white"
                 android:fontFamily="@font/inter_semibold"
                 android:layout_marginEnd="@dimen/_10sdp"
@@ -173,7 +179,7 @@
                 android:id="@+id/tv11"
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
-                android:text="Closeing Balance: "
+                android:text="Closing Balance: "
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toStartOf="@+id/tv10"
