--- a/app/src/main/res/layout/holder_wallet_transactions.xml
+++ b/app/src/main/res/layout/holder_wallet_transactions.xml
@@ -41,9 +41,9 @@
                 android:layout_height="@dimen/_32sdp"
                 android:id="@+id/iv1"
                 android:layout_marginStart="@dimen/_10sdp"
+                setStatus3="@{bean.status}"
                 android:src="@drawable/up_arrow_svgrepo_com"
                 android:scaleType="centerCrop"
-                android:rotation="180"
                 app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -66,7 +66,7 @@
                 android:fontFamily="@font/inter_semibold"
                 android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="@+id/iv1"
-                android:text="Credit"
+                setStatus1="@{bean.status}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp"
                 app:layout_constraintTop_toBottomOf="@+id/tv1"
@@ -125,7 +125,7 @@
                 android:id="@+id/tv7"
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
-                android:text="Credited"
+                setStatus="@{bean.status}"
                 android:textColor="@android:color/holo_green_light"
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginStart="@dimen/_3sdp"
@@ -137,9 +137,8 @@
                 android:id="@+id/tv8"
                 style="@style/TextView.InterRegular_12ssp"
                 android:singleLine="true"
-                android:text="Payment Id:"
+                android:text="Comment :"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/inter_semibold"
                 android:textSize="@dimen/_12sdp"
@@ -152,11 +151,11 @@
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{bean.payment_id}"
+                android:text='@{bean.description}'
                 android:textColor="@color/white"
                 android:paddingBottom="@dimen/_5sdp"
-                tools:text="sadasdadas das d asd as d asd as d asd as das "
                 android:textSize="@dimen/_12sdp"
+                tools:text="aasdd as das d asd asd a d asd as dsa d asd sa d sad as d sad asd as d sa sad "
                 android:layout_marginStart="@dimen/_3sdp"
                 app:layout_constraintStart_toEndOf="@+id/tv8"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -172,6 +171,7 @@
                 android:fontFamily="@font/inter_semibold"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:textSize="@dimen/_12sdp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv6"/>
 
@@ -181,6 +181,7 @@
                 android:singleLine="true"
                 android:text="Closing Balance: "
                 android:textColor="@color/white"
+                android:visibility="gone"
                 android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toStartOf="@+id/tv10"
                 app:layout_constraintTop_toTopOf="@+id/tv10"/>
