--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -48,7 +48,7 @@
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:gravity="center_vertical"
-                android:text="Wallet"
+                android:text="Finza Wallet"
                 android:textColor="@color/fsm_bg_light_teal"
                 android:textSize="@dimen/_16sdp" />
 
@@ -163,7 +163,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cvBalance" />
 
         <LinearLayout
-            android:layout_width="@dimen/_70sdp"
+            android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginEnd="@dimen/_10sdp"
