tag entry ui changes done

--- a/app/src/main/res/layout/activity_issue_super_tag.xml
+++ b/app/src/main/res/layout/activity_issue_super_tag.xml
@@ -14,10 +14,10 @@
 
     <LinearLayout
         android:id="@+id/container"
-        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,8 +96,8 @@
                 style="@style/TextView.InterRegular_12ssp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_25ssp"
                 android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_25ssp"
                 android:text="FASTag Id*"
                 android:textColor="@color/fsm_text_color"
                 android:textSize="@dimen/_12sdp"
@@ -105,17 +105,63 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/bgView" />
 
-            <EditText
-                android:id="@+id/etvFastTagId"
-                style="@style/EditText.Phone"
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_10sdp"
                 android:layout_marginTop="8dp"
-                android:imeOptions="actionDone"
-                android:inputType="number"
                 app:layout_constraintEnd_toEndOf="@id/tvPhone"
                 app:layout_constraintStart_toStartOf="@id/tvPhone"
-                app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
+                app:layout_constraintTop_toBottomOf="@+id/tvPhone">
+
+                <EditText
+                    android:id="@+id/etvFastTagId1"
+                    style="@style/EditText.Phone"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:hint="XXXXXX"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="6" />
+
+                <View
+                    android:layout_width="@dimen/_10sdp"
+                    android:layout_height="@dimen/_2sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:background="@color/fsm_text_color" />
+
+                <EditText
+                    android:id="@+id/etvFastTagId2"
+                    style="@style/EditText.Phone"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:hint="XXX"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="3" />
+
+                <View
+                    android:layout_width="@dimen/_10sdp"
+                    android:layout_height="@dimen/_2sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:background="@color/fsm_text_color" />
+
+                <EditText
+                    android:id="@+id/etvFastTagId3"
+                    style="@style/EditText.Phone"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:hint="XXXXXXX"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="7" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvSubmit"
